src/parser/GoJaParser.java
// Generated from C:/Users/Usuario/Documents/UNI/5ºAño/2º Semestre/DLP/dlp/src/parser/GoJa.g4 by ANTLR 4.13.1
package parser;

    import ast.*;
    import ast.statements.*;
    import ast.types.*;
    import ast.expressions.*;
    import ast.definitions.*;
    import java.util.List;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GoJaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, INT_CONSTANT=38, 
		REAL_CONSTANT=39, REAL_1=40, REAL_2=41, CHAR_CONSTANT=42, IDENTIFICADOR=43, 
		COMMENT=44, MULTI_COMMENT=45, WS=46;
	public static final int
		RULE_program = 0, RULE_definiciones = 1, RULE_var_definition = 2, RULE_fields = 3, 
		RULE_vars = 4, RULE_tipo = 5, RULE_func_definition = 6, RULE_tipo_simple = 7, 
		RULE_params = 8, RULE_param = 9, RULE_statement = 10, RULE_statements = 11, 
		RULE_expresion = 12, RULE_expresiones = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definiciones", "var_definition", "fields", "vars", "tipo", 
			"func_definition", "tipo_simple", "params", "param", "statement", "statements", 
			"expresion", "expresiones"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'func'", "'main'", "'('", "')'", "'{'", "'}'", "'var'", "';'", 
			"'struct'", "','", "'['", "']'", "'def'", "'int'", "'char'", "'float32'", 
			"'='", "'write'", "'read'", "'return'", "'while'", "'if'", "'else'", 
			"'-'", "'*'", "'/'", "'%'", "'+'", "'<'", "'>'", "'<='", "'>='", "'!='", 
			"'=='", "'&&'", "'||'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "INT_CONSTANT", "REAL_CONSTANT", "REAL_1", "REAL_2", "CHAR_CONSTANT", 
			"IDENTIFICADOR", "COMMENT", "MULTI_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GoJa.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GoJaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> others = new ArrayList<>();
		public List<Statement> mainBody = new ArrayList<Statement>();;
		public DefinicionesContext definiciones;
		public Token f;
		public Token m;
		public Var_definitionContext var_definition;
		public StatementContext s;
		public TerminalNode EOF() { return getToken(GoJaParser.EOF, 0); }
		public List<DefinicionesContext> definiciones() {
			return getRuleContexts(DefinicionesContext.class);
		}
		public DefinicionesContext definiciones(int i) {
			return getRuleContext(DefinicionesContext.class,i);
		}
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoJaVisitor ) return ((GoJaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6 || _la==T__12) {
				{
				{
				setState(28);
				((ProgramContext)_localctx).definiciones = definiciones();
				 _localctx.others.addAll(((ProgramContext)_localctx).definiciones.ast); 
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			((ProgramContext)_localctx).f = match(T__0);
			setState(37);
			((ProgramContext)_localctx).m = match(T__1);
			setState(38);
			match(T__2);
			setState(39);
			match(T__3);
			setState(40);
			match(T__4);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(41);
				((ProgramContext)_localctx).var_definition = var_definition();
				 _localctx.mainBody.addAll(((ProgramContext)_localctx).var_definition.ast); 
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14018798274568L) != 0)) {
				{
				{
				setState(49);
				((ProgramContext)_localctx).s = statement();
				 _localctx.mainBody.add(((ProgramContext)_localctx).s.ast); 
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(T__5);
			 _localctx.others.add(new FunctionDefinition(((ProgramContext)_localctx).f.getLine(), ((ProgramContext)_localctx).f.getCharPositionInLine() + 1,
			                    new FunctionType(((ProgramContext)_localctx).f.getLine(), ((ProgramContext)_localctx).f.getCharPositionInLine() + 1,
			                    VoidType.getInstance(), new ArrayList<VarDefinition>()),
			                    (((ProgramContext)_localctx).m!=null?((ProgramContext)_localctx).m.getText():null), _localctx.mainBody
			                ));
			 ((ProgramContext)_localctx).ast =  new Program(1, 1, _localctx.others); 
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionesContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();;
		public Var_definitionContext v;
		public Func_definitionContext f;
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Func_definitionContext func_definition() {
			return getRuleContext(Func_definitionContext.class,0);
		}
		public DefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoJaVisitor ) return ((GoJaVisitor<? extends T>)visitor).visitDefiniciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionesContext definiciones() throws RecognitionException {
		DefinicionesContext _localctx = new DefinicionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definiciones);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				((DefinicionesContext)_localctx).v = var_definition();
				 _localctx.ast.addAll(((DefinicionesContext)_localctx).v.ast); 
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				((DefinicionesContext)_localctx).f = func_definition();
				 _localctx.ast.add(((DefinicionesContext)_localctx).f.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();;
		public List<StructField> campos = new ArrayList<>();;
		public Token l;
		public VarsContext vars;
		public TipoContext tipo;
		public FieldsContext f;
		public List<VarsContext> vars() {
			return getRuleContexts(VarsContext.class);
		}
		public VarsContext vars(int i) {
			return getRuleContext(VarsContext.class,i);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<FieldsContext> fields() {
			return getRuleContexts(FieldsContext.class);
		}
		public FieldsContext fields(int i) {
			return getRuleContext(FieldsContext.class,i);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoJaVisitor ) return ((GoJaVisitor<? extends T>)visitor).visitVar_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((Var_definitionContext)_localctx).l = match(T__6);
			setState(71);
			((Var_definitionContext)_localctx).vars = vars();
			setState(72);
			((Var_definitionContext)_localctx).tipo = tipo();
			setState(73);
			match(T__7);
			   for(String v: ((Var_definitionContext)_localctx).vars.ast) {
			                _localctx.ast.add(new VarDefinition(((Var_definitionContext)_localctx).l.getLine(), ((Var_definitionContext)_localctx).l.getCharPositionInLine() + 1, ((Var_definitionContext)_localctx).tipo.ast, v));
			            }
			        
			setState(75);
			((Var_definitionContext)_localctx).l = match(T__6);
			setState(76);
			((Var_definitionContext)_localctx).vars = vars();
			setState(77);
			match(T__8);
			setState(78);
			match(T__4);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(79);
				((Var_definitionContext)_localctx).f = fields();
				 _localctx.campos.addAll(((Var_definitionContext)_localctx).f.ast); 
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(87);
			match(T__5);
			setState(88);
			match(T__7);
			   for(String v: ((Var_definitionContext)_localctx).vars.ast) {
			                  _localctx.ast.add(new VarDefinition(((Var_definitionContext)_localctx).l.getLine(), ((Var_definitionContext)_localctx).l.getCharPositionInLine() + 1,
			                  new StructType(((Var_definitionContext)_localctx).l.getLine(), ((Var_definitionContext)_localctx).l.getCharPositionInLine() + 1, _localctx.campos), v));
			             }
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldsContext extends ParserRuleContext {
		public List<StructField> ast = new ArrayList<>();;
		public Token l;
		public VarsContext vars;
		public TipoContext tipo;
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoJaVisitor ) return ((GoJaVisitor<? extends T>)visitor).visitFields(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fields);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((FieldsContext)_localctx).l = match(T__6);
			setState(92);
			((FieldsContext)_localctx).vars = vars();
			setState(93);
			((FieldsContext)_localctx).tipo = tipo();
			setState(94);
			match(T__7);
			   for (String v: ((FieldsContext)_localctx).vars.ast) {
			                _localctx.ast.add(new StructField(((FieldsContext)_localctx).l.getLine(), ((FieldsContext)_localctx).l.getCharPositionInLine() + 1, ((FieldsContext)_localctx).tipo.ast, v));
			            }
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarsContext extends ParserRuleContext {
		public List<String> ast = new ArrayList<>();;
		public Token IDENTIFICADOR;
		public VarsContext vars;
		public TerminalNode IDENTIFICADOR() { return getToken(GoJaParser.IDENTIFICADOR, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoJaVisitor ) return ((GoJaVisitor<? extends T>)visitor).visitVars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vars);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				((VarsContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
				 _localctx.ast.add((((VarsContext)_localctx).IDENTIFICADOR!=null?((VarsContext)_localctx).IDENTIFICADOR.getText():null)); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				((VarsContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
				setState(100);
				match(T__9);
				setState(101);
				((VarsContext)_localctx).vars = vars();
				 ((VarsContext)_localctx).vars.ast.add((((VarsContext)_localctx).IDENTIFICADOR!=null?((VarsContext)_localctx).IDENTIFICADOR.getText():null)); ((VarsContext)_localctx).ast =  ((VarsContext)_localctx).vars.ast; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public Type ast;
		public Tipo_simpleContext tipo_simple;
		public Token i;
		public Token INT_CONSTANT;
		public TipoContext tipo;
		public Tipo_simpleContext tipo_simple() {
			return getRuleContext(Tipo_simpleContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(GoJaParser.INT_CONSTANT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoJaVisitor ) return ((GoJaVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipo);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
			case T__14:
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				((TipoContext)_localctx).tipo_simple = tipo_simple();
				 ((TipoContext)_localctx).ast =  ((TipoContext)_localctx).tipo_simple.ast; 
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				((TipoContext)_localctx).i = match(T__10);
				setState(110);
				((TipoContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				setState(111);
				match(T__11);
				setState(112);
				((TipoContext)_localctx).tipo = tipo();
				  ((TipoContext)_localctx).ast =  new ArrayType(((TipoContext)_localctx).i.getLine(), ((TipoContext)_localctx).i.getCharPositionInLine() + 1, LexerHelper.lexemeToInt((((TipoContext)_localctx).INT_CONSTANT!=null?((TipoContext)_localctx).INT_CONSTANT.getText():null)), ((TipoContext)_localctx).tipo.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_definitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Type t = VoidType.getInstance();
		public List<VarDefinition> lparams = new ArrayList<>();
		public List<Statement> body = new ArrayList<>();;
		public Token d;
		public Token id;
		public ParamsContext p;
		public Tipo_simpleContext tipo_simple;
		public Var_definitionContext v;
		public StatementContext s;
		public TerminalNode IDENTIFICADOR() { return getToken(GoJaParser.IDENTIFICADOR, 0); }
		public Tipo_simpleContext tipo_simple() {
			return getRuleContext(Tipo_simpleContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Func_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoJaVisitor ) return ((GoJaVisitor<? extends T>)visitor).visitFunc_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_definitionContext func_definition() throws RecognitionException {
		Func_definitionContext _localctx = new Func_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			((Func_definitionContext)_localctx).d = match(T__12);
			setState(118);
			((Func_definitionContext)_localctx).id = match(IDENTIFICADOR);
			setState(119);
			match(T__2);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(120);
				((Func_definitionContext)_localctx).p = params();
				 _localctx.lparams.addAll(((Func_definitionContext)_localctx).p.ast); 
				}
			}

			setState(125);
			match(T__3);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 114688L) != 0)) {
				{
				setState(126);
				((Func_definitionContext)_localctx).tipo_simple = tipo_simple();
				 ((Func_definitionContext)_localctx).t =  ((Func_definitionContext)_localctx).tipo_simple.ast; 
				}
			}
